k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: samal024/api-gateway
          ports:
            - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-app
  ports:
    - port: 80
      targetPort: 9090
