k8s/authorization-server.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authorization-server
  labels:
    app: authorization-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-server
  serviceName: authorization-server-svc
  template:
    metadata:
      labels:
        app: authorization-server
    spec:
      containers:
        - name: authorization-server
          image: samal024/authorization-server
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: auth-persistent-storage
              mountPath: /var/lib/auth
      volumes:
        - name: auth-persistent-storage
          persistentVolumeClaim:
            claimName: auth-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-server-svc
spec:
  clusterIP: None
  selector:
    app: authorization-server
  ports:
    - port: 9000
      targetPort: 9000
