k8s/chat-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service-svc
    template:
      metadata:
        labels:
          app: chat-service-app
      spec:
        containers:
        - name: chat-service-app
          image: samal024/chat-service
          ports:
          - containerPort: 8097
---

apiVersion: v1
kind: Service
metadata:
  name: chat-service-svc
spec:
  selector:
    app: chat-service-app
  ports:
    - port: 80
      targetPort: 8097
