k8s/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: samal024/config-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: config-server
  ports:
    - port: 8088
      targetPort: 8088
