k8s/kafka-broker.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka-broker
      containers:
        - name: kafka
          image: bitnami/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-config
              mountPath: /opt/bitnami/kafka/conf
            - name: kafka-persistent-storage
              mountPath: /var/lib/kafka
      volumes:
        - name: kafka-config
          configMap:
            name: kafka-init-cm
        - name: kafka-persistent-storage
          persistentVolumeClaim:
            claimName: kafka-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
