k8s/react-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: samal024/crowdcraft-react-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: react-app-svc
spec:
  selector:
    app: react-app
  ports:
    - port: 3000
      targetPort: 3000
