k8s/zookeeper.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: zookeeper-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zookeeper-persistent-storage
              mountPath: /var/lib/zookeeper
      volumes:
        - name: zookeeper-persistent-storage
          persistentVolumeClaim:
            claimName: zookeeper-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
spec:
  clusterIP: None
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
