k8s/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-services-ingress
  namespace: micro-services
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: crowdcraft.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-lb
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authorization-ingress
  namespace: authorization
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.crowdcraft.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authorization-server-lb
                port:
                  number: 9000
